--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
         --root_background: white;
     }
 :root{
-    background-color: #1f1f1f;
+    background-color: var(--root_background);
 }
 
 /* Modern Theme Variables */
